--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,19 @@ body{
     margin: 125px 300px 75px;
 }
 
+.logoabout img{
+    width: 540px;
+    height: 100px;
+}
+
+p{
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.kontak{
+    position: relative;
+    top: 230px;
+    left: 30px;
+}
 
